--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
-    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:allowBackup="true"
@@ -16,8 +15,11 @@
         android:icon="@drawable/socialmedia_tech_09"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:testOnly="true"
+        android:debuggable="true"
         android:theme="@style/Theme.NotificationLocation"
-        tools:targetApi="31">
+        tools:targetApi="33"
+        tools:ignore="HardcodedDebugMode">
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
